# big3d-api

./: .gitignore  .tool-versions  package.json  pnpm-lock.yaml  requirements.txt  serverless.yml
big3d/: .gitignore  .pre-commit-config.yaml  Dockerfile  auth.py  depends.py  handler.py  model.py  order.py  pyproject.toml  requirements.txt  schemas.py  serverless.yml  utils.py
big3d/functions/: base.py  order_create.py  order_get.py  order_list.py  order_model.py  user_create.py  user_model.py  utils.py
big3d/scripts/: docker-entry-point.sh
