[tool.poetry]
name = "big3d"
version = "0.1.0"
description = "Big3D Serverless Api"
authors = ["Braden Mars <bradenmars@bradenmars.me>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pynamodb = "^5.1.0"
boto3 = "^1.18.18"
pydantic = "^1.8.2"
loguru = "^0.5.3"
python-multipart = "^0.0.5"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
mangum = "^0.12.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.14.0"
pdbpp = "^0.10.3"
mypy = { version = "^0.910", extras = ["dmypy"] }
typing-extensions = "^3.10.0"
# This is listed as a dev-dep b/c it is provided
# via the base Dockerfile and seems to have issues
# installing as normal.
threedframe = {git = "https://github.com/arroyodev-llc/3dframe.git"}
# Also installed in dockerfile.
awslambdaric = "^1.2.0"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py38']
include = '\.pyi?$'
exclude = '''/(\.eggs|\.mpy_cache|\.direnv|build|dist|snippets)/'''

[tool.isort]
profile = "black"
src_paths = ["."]
line_length = 100
honor_noqa = true

[tool.pydantic-mypy]
warn-untyped-fields = true

[tool.pydantic-pycharm-plugin]
ignore-init-method-arguments = true

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true
follow_imports = "normal"
